--- a/api-gateway-dev.properties
+++ b/api-gateway-dev.properties
@@ -8,10 +8,10 @@ spring.cloud.gateway.routes[1].uri=lb://TRANSACTION-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path=/transaction/**
 spring.cloud.gateway.routes[2].id=bank-account-service
 spring.cloud.gateway.routes[2].uri=lb://BANK-ACCOUNT-SERVICE
-spring.cloud.gateway.routes[2].predicates[0]=Path=/bankAccount/**, /accountType/**
+spring.cloud.gateway.routes[2].predicates[0]=Path=/bankAccount/**, /accountType/**, /actuator/**
 spring.cloud.gateway.routes[3].id=bank-credit-service
 spring.cloud.gateway.routes[3].uri=lb://BANK-CREDIT-SERVICE
-spring.cloud.gateway.routes[3].predicates[0]=Path=/bankCredit/**, /creditType/**, /bankDebt/**
+spring.cloud.gateway.routes[3].predicates[0]=Path=/bankCredit/**, /creditType/**, /bankDebt/**, /actuator/**
 spring.cloud.gateway.routes[4].id=bank-report-service
 spring.cloud.gateway.routes[4].uri=lb://BANK-REPORT-SERVICE
 spring.cloud.gateway.routes[4].predicates[0]=Path=/bankProduct/**
