--- a/customer-service-dev.properties
+++ b/customer-service-dev.properties
@@ -1,3 +1,3 @@
 spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=client
+spring.data.mongodb.database=customer
